# Realtime-data-pipeline

./: .gitignore  README.md  docker-compose.yml
consumer-python/: Dockerfile  main.py  requirements.txt
producer-rust/: Cargo.toml  dockerfile
producer-rust/src/: main.rs
